charon/tests/ui/issue-967-mismatched-generics.out
error: Type error after transformations:
       Mismatched trait clause:
       expected: [@TraitClause1]: IsLess<Clause0_Clause1_Clause0_BlockSize, u128, Clause1_Output>
            got: @TraitClause1: IsLess<Clause0_Clause0_BlockSize, u128, Clause1_Output>
       Visitor stack:
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitDeclRef
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 1):
         0: <T, Clause0_ReaderCore, Clause0_Clause0_BlockSize, Clause0_Clause1_BufferKind, Clause0_Clause1_Clause0_BlockSize, Clause0_Clause2_Output, Clause0_Clause4_BlockSize, Clause1_Output, Clause3_Output, [@TraitClause0]: @TraitDecl4<missing(@TypeBound(1, 0)), missing(@TypeBound(1, 1)), missing(@TypeBound(1, 2)), missing(@TypeBound(1, 3)), missing(@TypeBound(1, 4)), missing(@TypeBound(1, 5)), missing(@TypeBound(1, 6))>, [@TraitClause1]: @TraitDecl2<missing(@TypeBound(1, 2)), u128, missing(@TypeBound(1, 7))>, [@TraitClause2]: @TraitDecl0<missing(@TypeBound(1, 7))>, [@TraitClause3]: @TraitDecl2<missing(@TypeBound(1, 6)), u128, missing(@TypeBound(1, 8))>, [@TraitClause4]: @TraitDecl0<missing(@TypeBound(1, 8))>>
  --> tests/ui/issue-967-mismatched-generics.rs:44:1
   |
44 | / impl<T> ExtendableOutput for CoreWrapper<T>
45 | | where
46 | |     T: ExtendableOutputCore,
47 | |     T::BlockSize: IsLess<u128>,
...  |
57 | | }
   | |_^

error: Type error after transformations:
       Mismatched trait clause:
       expected: [@TraitClause1]: IsLess<Clause0_Clause1_Clause0_BlockSize, u128, Clause1_Output>
            got: @TraitClause1: IsLess<Clause0_Clause0_BlockSize, u128, Clause1_Output>
       Visitor stack:
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         alloc::vec::Vec<charon_lib::ast::types::Ty>
         charon_lib::ast::types::FunSig
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <T, Clause0_ReaderCore, Clause0_Clause0_BlockSize, Clause0_Clause1_BufferKind, Clause0_Clause1_Clause0_BlockSize, Clause0_Clause2_Output, Clause0_Clause4_BlockSize, Clause1_Output, Clause3_Output, [@TraitClause0]: @TraitDecl4<missing(@TypeBound(1, 0)), missing(@TypeBound(1, 1)), missing(@TypeBound(1, 2)), missing(@TypeBound(1, 3)), missing(@TypeBound(1, 4)), missing(@TypeBound(1, 5)), missing(@TypeBound(1, 6))>, [@TraitClause1]: @TraitDecl2<missing(@TypeBound(1, 2)), u128, missing(@TypeBound(1, 7))>, [@TraitClause2]: @TraitDecl0<missing(@TypeBound(1, 7))>, [@TraitClause3]: @TraitDecl2<missing(@TypeBound(1, 6)), u128, missing(@TypeBound(1, 8))>, [@TraitClause4]: @TraitDecl0<missing(@TypeBound(1, 8))>>
  --> tests/ui/issue-967-mismatched-generics.rs:54:5
   |
54 | /     fn finalize_xof(self) -> Self::Reader {
55 | |         panic!()
56 | |     }
   | |_____^

error: Type error after transformations:
       Mismatched trait clause:
       expected: [@TraitClause1]: IsLess<Clause0_Clause1_Clause0_BlockSize, u128, Clause1_Output>
            got: @TraitClause1: IsLess<Clause0_Clause0_BlockSize, u128, Clause1_Output>
       Visitor stack:
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitDeclRef
         charon_lib::ast::gast::ItemSource
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <T, Clause0_ReaderCore, Clause0_Clause0_BlockSize, Clause0_Clause1_BufferKind, Clause0_Clause1_Clause0_BlockSize, Clause0_Clause2_Output, Clause0_Clause4_BlockSize, Clause1_Output, Clause3_Output, [@TraitClause0]: @TraitDecl4<missing(@TypeBound(1, 0)), missing(@TypeBound(1, 1)), missing(@TypeBound(1, 2)), missing(@TypeBound(1, 3)), missing(@TypeBound(1, 4)), missing(@TypeBound(1, 5)), missing(@TypeBound(1, 6))>, [@TraitClause1]: @TraitDecl2<missing(@TypeBound(1, 2)), u128, missing(@TypeBound(1, 7))>, [@TraitClause2]: @TraitDecl0<missing(@TypeBound(1, 7))>, [@TraitClause3]: @TraitDecl2<missing(@TypeBound(1, 6)), u128, missing(@TypeBound(1, 8))>, [@TraitClause4]: @TraitDecl0<missing(@TypeBound(1, 8))>>
  --> tests/ui/issue-967-mismatched-generics.rs:54:5
   |
54 | /     fn finalize_xof(self) -> Self::Reader {
55 | |         panic!()
56 | |     }
   | |_____^

error: Type error after transformations:
       Mismatched trait clause:
       expected: [@TraitClause1]: IsLess<Clause0_Clause1_Clause0_BlockSize, u128, Clause1_Output>
            got: @TraitClause1: IsLess<Clause0_Clause0_BlockSize, u128, Clause1_Output>
       Visitor stack:
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ast::gast::Local
         charon_lib::ids::index_vec::IndexVec<charon_lib::ast::values::LocalId, charon_lib::ast::gast::Local>
         charon_lib::ast::gast::Locals
         charon_lib::ast::gast::GExprBody<charon_lib::ast::llbc_ast::Block>
         charon_lib::ast::gast::Body
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <T, Clause0_ReaderCore, Clause0_Clause0_BlockSize, Clause0_Clause1_BufferKind, Clause0_Clause1_Clause0_BlockSize, Clause0_Clause2_Output, Clause0_Clause4_BlockSize, Clause1_Output, Clause3_Output, [@TraitClause0]: @TraitDecl4<missing(@TypeBound(1, 0)), missing(@TypeBound(1, 1)), missing(@TypeBound(1, 2)), missing(@TypeBound(1, 3)), missing(@TypeBound(1, 4)), missing(@TypeBound(1, 5)), missing(@TypeBound(1, 6))>, [@TraitClause1]: @TraitDecl2<missing(@TypeBound(1, 2)), u128, missing(@TypeBound(1, 7))>, [@TraitClause2]: @TraitDecl0<missing(@TypeBound(1, 7))>, [@TraitClause3]: @TraitDecl2<missing(@TypeBound(1, 6)), u128, missing(@TypeBound(1, 8))>, [@TraitClause4]: @TraitDecl0<missing(@TypeBound(1, 8))>>
  --> tests/ui/issue-967-mismatched-generics.rs:54:5
   |
54 | /     fn finalize_xof(self) -> Self::Reader {
55 | |         panic!()
56 | |     }
   | |_____^

ERROR Charon failed to translate this code (4 errors)
